Constrain width of slider panel.

--- a/stage2_2test/Game.html
+++ b/stage2_2test/Game.html
@@ -9,7 +9,7 @@ Stage 2: Round {% player.round_number %} of 5
 {% block content %}
 <div class="d-flex flex-column align-items-center">
     <progress id="progress-bar" max="{% params.num_sliders %}" value="0"></progress>
-    <canvas id="canvas" class="m-2"></canvas>
+    <canvas id="canvas" class="m-2 w-100"></canvas>
 
 </div>
 <br>
