Clean up Stage 1.

--- a/stage1/Instructions.html
+++ b/stage1/Instructions.html
@@ -1,41 +1,39 @@
 {% block title %}
-    Stage 1 : Instructions
+    Stage 1: Instructions
 {% endblock %}
 {% block content %}
     <p>
-        For each round, your screen will show 48 randomly positioned sliders. To correctly
-        complete a slider, it must be moved <em>exactly to the center marked by a red dot.</em> The slider will turn <em>green
-        when correctly completed.</em>
-        The screen will show you the timer and a progress bar indicating how many sliders you have completed. The next
-        round will begin automatically after 90 seconds with a new set of sliders.
+        Stage 1 will consist of five <b>rounds</b>.  Each round will last for <b>90 seconds</b>.
     </p>
 
     <p>
-        You must move <em>as many sliders to the center as you can</em>. Sliders completed in all rounds will be counted.
-    </p>
-
-    <p><strong>
-        If this stage is chosen for your payment, you will receive £1.5 per round.
-    </strong></p>
-
-    <p>
-        Please raise your hand if you have any questions.
+        In each round, you will see a screen with 48 sliders.  Each slider will start out at a random position.
     </p>
 
     <p>
-        Click on 'next' to begin the first round.
+        Your objective is to move as many sliders to the centre of the slider bar as you can.
     </p>
 
+    <p>
+        The centre of the slider bar is marked by a <b>red dot</b>.  You will know you have successfully
+        positioned the slider at the centre of the bar when the slider turns <b>green</b>.
+    </p>
 
-    {% next_button %}
+    <p>
+        The screen will contain a timer showing you how much time remains in the round, and a progress bar
+        showing how many sliders you have completed.
+    </p>
 
-    <footer>
-            <hr/>
-            <div class="text-right">
-                <p class="text-muted font-italic">Laboratory for Economic and Decision Research, University of East Anglia
-                    <img src="{% static 'global/uea.png' %}" class="align-content-center ml-3" alt="UEA logo"/>
-                </p>
-        </div>
-        </footer>
+    <p>
+        Each round will begin immediately after the end of the previous round.
+    </p>
+
+    <p>
+        If this stage is chosen to determine your earnings for the experiment, you will receive
+        <b>£1.50 per round</b>, for a total of <b>£7.50</b>.
+    </p>
+
+    {{ include "global/ButtonIfDemo.html" }}
+    {{ include "global/Footer.html" }}
 
 {% endblock %}
