--- a/stage1/Results.html
+++ b/stage1/Results.html
@@ -17,7 +17,7 @@ Stage 1 results
 </p>
 
 <p>
-    Remember that if this stage is chosen to determine your earnings for the experiment,
+    If Stage 1 is chosen to determine your earnings for the experiment,
     your earnings would be <b>{% player.potential_payoff %}</b>.
 </p>
 
