--- a/stage1_final/S1_Instructions.html
+++ b/stage1_final/S1_Instructions.html
@@ -4,8 +4,8 @@
 {% block content %}
     <p>
         For each round, your screen will show 48 randomly positioned sliders. To correctly
-        complete a slider, it must be moved <em>exactly to the center marked by a red dot.</em> The slider will turn <em>green
-        when correctly completed.</em>
+        complete a slider, it must be moved <em>exactly to the center marked by the small red dot.</em> The slider will turn <em>blue
+        when correctly completed</em> and remain red if not.
         The screen will show you the timer and a progress bar indicating how many sliders you have completed. The next
         round will begin automatically after 90 seconds with a new set of sliders.
     </p>
