Tidy up recording and reporting of donation information.

--- a/_templates/global/Results.html
+++ b/_templates/global/Results.html
@@ -27,7 +27,7 @@ Stage results
     your earnings would be <b>{{ potential_payoff }}</b>.
 </p>
 
-    {{ include "global/ButtonIfDemo.html" }}
+    {{ include "global/ButtonNext.html" with button_text="Next" }}
     {{ include "global/Footer.html" }}
 
 {% endblock %}
