--- a/stage1/Instructions.html
+++ b/stage1/Instructions.html
@@ -33,7 +33,7 @@
         <b>£1.50 per round</b>, for a total of <b>£7.50</b>.
     </p>
 
-    {{ include "global/ButtonIfDemo.html" }}
+    {{ include "global/ButtonNext.html" with button_text="Begin Stage 1" }}
     {{ include "global/Footer.html" }}
 
 {% endblock %}
