--- a/stage2/Instructions.html
+++ b/stage2/Instructions.html
@@ -2,40 +2,18 @@
 {% block content %}
 
     <p>
-        For Stage 2, you have been assigned as your charity
+        For Stage 2, you have been assigned as your charity <strong>{{ charity_name }}</strong>,
         {% if participant.charity_order %}
-            <strong>
-            {% if participant.CISWO == 1 %}
-                CISWO (Coal Industry Social Welfare Organisation)
-            {% elif participant.Ember == 1 %}
-                The Crowd: Ember
-            {% elif participant.CARE == 1 %}
-                CARE (Christian Action, Research, and Education)
-            {% else %}
-                BPAS (British Pregnancy Advisory Service)
-            {% endif %}
-            </strong>,
-        which is the charity you indicated you <strong>preferred the most</strong>.
+            which is the charity you indicated you <strong>preferred the most</strong>.
         {% else %}
-            <strong>
-                {% if participant.CISWO == 4 %}
-                CISWO (Coal Industry Social Welfare Organisation)
-            {% elif participant.Ember == 4 %}
-                The Crowd: Ember
-            {% elif participant.CARE == 4 %}
-                CARE (Christian Action, Research, and Education)
-            {% else %}
-                BPAS (British Pregnancy Advisory Service)
-            {% endif %}
-            </strong>,
-        which is the charity you indicated you <strong>preferred the least</strong>.
+            which is the charity you indicated you <strong>preferred the least</strong>.
         {% endif %}
     </p>
 
     <p>
-        Every slider completed in this stage will result in a <strong>£0.05</strong> donation to this charity.
-        At the end of the experiment, one participant will be chosen at random, and the donation
-        from this stage will be donated.
+        Every slider completed in this stage will result in a potential <strong>£0.05</strong> donation to this charity.
+        At the end of the experiment, we will choose one round at random, and the corresponding donation resulting
+        from the sliders you completed in that round will be donated.
     </p>
 
     <p>
@@ -51,9 +29,7 @@
             </p>
     {% endif %}
 
-
-
-    {{ include "global/ButtonIfDemo.html" }}
+    {{ include "global/ButtonNext.html" with button_text="Begin Stage 2" }}
     {{ include "global/Footer.html" }}
 
 {% endblock %}
