Updating Instructions.html for donation calculations

--- a/stage1/Instructions.html
+++ b/stage1/Instructions.html
@@ -15,8 +15,8 @@
     </p>
 
     <p>
-        The centre of the slider bar is marked by a <b>red dot</b>.  You will know you have successfully
-        positioned the slider at the centre of the bar when the slider turns <b>green</b>.
+        The centre of the slider bar is marked by a <b>red dot</b>.  You will know you have correctly
+        positioned the slider at the centre of the bar when the slider turns <b>blue</b>.
     </p>
 
     <p>
