--- a/welcome/Welcome.html
+++ b/welcome/Welcome.html
@@ -29,7 +29,11 @@
             recorded anonymously, and will only be used in the analysis of the data from this experiment.
             </p>
 
-    {{ include "global/ButtonIfDemo.html" }}
+            <p>
+                Click on (next) to proceed to the introductory instructions.
+            </p>
+
+    {{ include "global/ButtonNext.html" with button_text="Next" }}
     {{ include "global/Footer.html" }}
 
 
